--- a/rabbitApp/templates/search.html
+++ b/rabbitApp/templates/search.html
@@ -2,53 +2,59 @@
 
 {% block content-body %}
 
-    {% for post in lastPost %}
+    {% for w in lastPost %}
         <div class="card mb-4">
             <div class="card-body">
                 <div class="row">
-                    <div class="col-m-2">
-                        {% if post.profile_img %}
-                        <img src= "{{ post.profile_img.url }}"  alt="img" style="width: 70px" />
-                        {% endif %}
-                    </div>
-                    <div class="col-md-4">
-                        <a href="{% url 'warren' post.name  %}">
-                            <p class="card-text"><b> w/{{ post.name | safe }}</b></p>
+                    <div class="col-6">
+                        <a href="{% url 'warren' w.name  %}">
+                            <p class="card-text">
+                                {% if w.profile_img %}
+                                <img class="img-fluid" src="{{ w.profile_img.url }}" style="width: 25px;height: 25px;border-radius: 50%">
+                                {% endif %}
+                                <b> w/{{ w.name | safe }}</b>
+                            </p>
                         </a>
                     </div>
-                    <div class="col-md-6">
-                        <p class="card-text">{{ post.description | safe }}</p>
+                    <div class="col-6">
+                        <div class="col-7 float-right">
+                        <form id="{{ w  }}form">
+                            {% csrf_token %}
+                            {% if w in suscribing %}
+                                <a class="btn btn-sm btn-primary btn-block" onclick="suscribe('{{ w.name }}');">UnSubscribe</a>
+                            {% else %}
+                                <a class="btn btn-sm btn-outline-primary btn-block" onclick="suscribe('{{ w.name }}');">Subscribe</a>
+                            {% endif %}
+                        </form>
+                        </div>
                     </div>
-                <form id="{{ post.name }}form">
-                    {% csrf_token %}
-                    {% if post in suscribing %}
-                        <a class="btn btn-primary" onclick="suscribe('{{ post.name }}');">UnSuscribe</a>
-                    {% else %}
-                        <a class="btn btn-outline-primary" onclick="suscribe('{{ post.name }}');">Suscribe</a>
-                    {% endif %}
-                </form>
                 </div>
             </div>
         </div>
     {% endfor %}
-     {% for u in users %}
+    {% for u in users %}
         <div class="card mb-4">
             <div class="card-body">
                 <div class="row">
-                    <div class="col-m-2">
-                        <a href="{% url 'profile' u.username %}">
-                            <p class="card-text"><b> r/{{ u.username | safe }}</b></p>
-                            <form id="{{ u.username }}form">
-                                {% csrf_token %}
-                                {% if u in following %}
-                                    <a class="btn btn-primary" onclick="follow('{{ u.username }}');">UnFollow</a>
-                                {% else %}
-                                    <a class="btn btn-outline-primary" onclick="follow('{{ u.username }}');">Follow</a>
-                                {% endif %}
-                            </form>
-                        </a>
+                    <div class="col-6">
+                    <a href="{% url 'profile' u.username %}">
+                        <p class="card-text"><b> r/{{ u.username | safe }}</b></p>
+                    </a>
                     </div>
-
+                    <div class="col-6">
+                        <div class="col-7 float-right">
+                        <form id="{{ u }}form">
+                            {% csrf_token %}
+                            {% if request.user != u %}
+                                {% if u in following %}
+                                    <a class="btn btn-sm btn-primary btn-block" onclick="follow('{{ u.username }}');">UnFollow </a>
+                                {% else %}
+                                    <a class="btn btn-sm btn-outline-primary btn-block" onclick="follow('{{ u.username }}');">Follow</a>
+                                {% endif %}
+                            {% endif %}
+                        </form>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -64,7 +70,7 @@
                 data: data,
                 success: (data) => {
                     if (data.status === 'ok') {
-
+                        location.reload();
                     } else {
                         alert(data.message);
                     }
@@ -80,7 +86,7 @@
                 data: data,
                 success: (data) => {
                     if (data.status === 'ok') {
-
+                        location.reload();
                     } else {
                         alert(data.message);
                     }
