--- a/rabbitApp/templates/warren_view.html
+++ b/rabbitApp/templates/warren_view.html
@@ -40,15 +40,17 @@
             <p class="card-text">Welcome to <b>w/{{ warren.name }}</b> main page.</p>
             <p class="card-text">{{ warren.description | safe }}</p>
             <p class="card-text"> Remember to subscribe to warrens and follow friends to keep up with the memes.</p>
+        </div>
         {% if request.user.is_authenticated %}
+         <div class="card my-4">
             <div class="card-body">
                 <a  class="my-1" href="{% url 'submit' %}"><i class="fas fa-pen cyan-text"></i>
                     <button class="btn btn-primary btn-sm my-0 ml-3" type="button">CREATE POST</button>
                 </a>
             </div>
             <div class="card-body">
-                <a  class="my-1" href="{% url 'warren_submit' %}"><i class="fas fa-plus-circle cyan-text"></i>
-                    <button class="btn btn-primary btn-sm my-0 ml-3" type="button">SUBSCRIBE TODO</button>
+                <a  class="my-1" href=""><i class="fas fa-users small cyan-text"></i>
+                    <button class="btn btn-sm my-0 ml-3  btn-outline-primary waves-effect waves-light" type="button">SUBSCRIBE TODO</button>
                 </a>
             </div>
         </div>
