--- a/rabbitApp/templates/search.html
+++ b/rabbitApp/templates/search.html
@@ -6,27 +6,29 @@
         <div class="card mb-4">
             <div class="card-body">
                 <div class="row">
-                    <div class="col-m-2">
+                    <div class="d-flex justify-content-start">
                         {% if post.profile_img %}
-                        <img src= "{{ post.profile_img.url }}"  alt="img" style="width: 70px" />
+                            <img src= "{{ post.profile_img.url }}"  alt="img" style="width: 50px;height:50px;border-radius: 50%" />
                         {% endif %}
-                    </div>
-                    <div class="col-md-4">
-                        <a href="{% url 'warren' post.name  %}">
+                        <a href="{% url 'warren' post.name  %}" class="my-1" style="margin-left: 5px">
                             <p class="card-text"><b> w/{{ post.name | safe }}</b></p>
                         </a>
                     </div>
-                    <div class="col-md-6">
+
+                    <div class="d-flex ml-auto justify-content-center">
                         <p class="card-text">{{ post.description | safe }}</p>
                     </div>
-                <form id="{{ post.name }}form">
-                    {% csrf_token %}
-                    {% if post in suscribing %}
-                        <a class="btn btn-primary" onclick="suscribe('{{ post.name }}');">UnSuscribe</a>
-                    {% else %}
-                        <a class="btn btn-outline-primary" onclick="suscribe('{{ post.name }}');">Suscribe</a>
-                    {% endif %}
-                </form>
+                    <div class="d-flex ml-auto justify-content-end">
+                        <form id="{{ post.name }}form">
+                            {% csrf_token %}
+                            {% if post in suscribing %}
+                                <a class="btn btn-primary btn-sm " onclick="suscribe('{{ post.name }}');">UnSuscribe</a>
+                            {% else %}
+                                <a class="btn btn-outline-primary btn-sm" onclick="suscribe('{{ post.name }}');">Suscribe</a>
+                            {% endif %}
+                        </form>
+
+                    </div>
                 </div>
             </div>
         </div>
@@ -35,19 +37,24 @@
         <div class="card mb-4">
             <div class="card-body">
                 <div class="row">
-                    <div class="col-m-2">
-                        <a href="{% url 'profile' u.username %}">
+                    <div class="d-flex justify-content-start">
+                        <a href="{% url 'profile' u.username %}" class="my-1" style="margin-left: 5px">
                             <p class="card-text"><b> r/{{ u.username | safe }}</b></p>
-                            <form id="{{ u.username }}form">
-                                {% csrf_token %}
-                                {% if u in following %}
-                                    <a class="btn btn-primary" onclick="follow('{{ u.username }}');">UnFollow</a>
-                                {% else %}
-                                    <a class="btn btn-outline-primary" onclick="follow('{{ u.username }}');">Follow</a>
-                                {% endif %}
-                            </form>
                         </a>
                     </div>
+                    <div class="d-flex ml-auto justify-content-end">
+                        <form id="{{ u.username }}form">
+                            {% csrf_token %}
+                            {% if u in following %}
+                                <a class="btn btn-primary btn-sm " onclick="follow('{{ u.username }}');">UnFollow</a>
+                            {% else %}
+                                <a class="btn btn-outline-primary btn-sm" onclick="follow('{{ u.username }}');">Follow</a>
+                            {% endif %}
+                        </form>
+                    </div>
+
+
+
 
                 </div>
             </div>
