US6-7-2 search list better, coments button, home navbar
TODO subscribe error, implement follow/subscrive extra buttons, navbar mycommunities/friends

--- a/rabbitApp/templates/search.html
+++ b/rabbitApp/templates/search.html
@@ -71,7 +71,7 @@
                 data: data,
                 success: (data) => {
                     if (data.status === 'ok') {
-
+                        location.reload();
                     } else {
                         alert(data.message);
                     }
@@ -87,7 +87,7 @@
                 data: data,
                 success: (data) => {
                     if (data.status === 'ok') {
-
+                        location.reload();
                     } else {
                         alert(data.message);
                     }
