US6-7-2 search list better, coments button, home navbar
TODO implement follow/subscrive extra buttons
show navbar mycommunities/friends

--- a/rabbitApp/templates/search.html
+++ b/rabbitApp/templates/search.html
@@ -42,6 +42,7 @@
                             <p class="card-text"><b> r/{{ u.username | safe }}</b></p>
                         </a>
                     </div>
+                {% if request.user != u %}
                     <div class="d-flex ml-auto justify-content-end">
                         <form id="{{ u.username }}form">
                             {% csrf_token %}
@@ -52,10 +53,7 @@
                             {% endif %}
                         </form>
                     </div>
-
-
-
-
+                {% endif %}
                 </div>
             </div>
         </div>
