--- a/rabbitApp/templates/base.html
+++ b/rabbitApp/templates/base.html
@@ -13,74 +13,72 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="stylesheet" href="{% static 'css/select2.min.css' %}"/>
 
-    {% block links %} {% endblock %}
+    {% block links %}
+     {% endblock %}
 </head>
 <body>
 <nav class="navbar navbar-light white" id="navbar_principal">
-     <div class="row justify-content-start">
-          <div class="col-2">
+     <div class="row" style="width: 100%">
+          <div class="d-flex mr-2 ml-1 justify-content-start">
+
              <a class="navbar-brand" href="{% url 'index' %}">
                 <img src="{% static 'img/rabbit-logo.png' %}" class="img" height="30px">
              </a>
-          </div>
-         <div class="col-5">
              <h2 class="black-text">rabbit</h2>
-         </div>
-         <div class="col-5 my-2">
-             <a class="nav-item dropdown">
-                    <a class="dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
+             <div class="nav-item dropdown btn-group" style="margin-left: 50px">
+                    <a class="dropdown-toggle my-2" id="dropdownMenu1" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false" style="width: 200px;">
                         Popular
                     </a>
-                    <div class="dropdown-menu dropdown-primary">
-                    {% if request.user.is_authenticated %}
-                        <a class="dropdown-item" href="{% url 'profile' user  %}" >
-                            My Profile
-                        </a>
-                    {%  endif %}
-                        <li class="dropdown-header " style="font-size: 10px;padding-left: 10px">ALL COMMUNITIES</li>
-                        {% for warren in warrens %}
-                            <a class="dropdown-item" href="{% url 'warren' warren.name  %}" >
-                            {% if warren.profile_img %}
-                                <img class="img-fluid" src="{{ warren.profile_img.url }}" style="width: 25px;height: 25px;border-radius: 50%">
-                            {% endif %}
-                            w/{{ warren.name | safe }}
-                            </a>
-                        {% endfor %}
+                    <div class="dropdown-menu dropdown-primary " style="width: 200px">
                         {% if request.user.is_authenticated %}
-                        <li class="dropdown-header " style="font-size: 10px;padding-left: 10px">OTHER</li>
-                        <li class="nav-item" style="margin-bottom: 10px">
-                            <a  class="my-1" href="{% url 'submit' %}" ><i class="fas fa-pen cyan-text"></i>
-                                Create Post
+                            <a class="dropdown-item" href="{% url 'profile' user  %}" >
+                                My Profile
                             </a>
-                        </li>
-                        <li class="nav-item" style="margin-bottom: 10px">
-                            <a  class="my-1" href="{% url 'warren_submit' %}"><i class="fas fa-plus-circle cyan-text"></i>
-                                Create Warren
-                            </a>
-                        </li>
-                        {% endif %}
+                        {%  endif %}
+                            <li class="dropdown-header " style="font-size: 10px;padding-left: 10px">ALL COMMUNITIES</li>
+                            {% for warren in warrens %}
+                                <a class="dropdown-item" href="{% url 'warren' warren.name  %}" >
+                                {% if warren.profile_img %}
+                                    <img class="img-fluid" src="{{ warren.profile_img.url }}" style="width: 25px;height: 25px;border-radius: 50%">
+                                {% endif %}
+                                w/{{ warren.name | safe }}
+                                </a>
+                            {% endfor %}
+                            {% if request.user.is_authenticated %}
+                            <li class="dropdown-header " style="font-size: 10px;padding-left: 10px">OTHER</li>
+                            <li class="nav-item" style="margin-bottom: 10px">
+                                <a  class="my-1" href="{% url 'submit' %}" ><i class="fas fa-pen cyan-text"></i>
+                                    Create Post
+                                </a>
+                            </li>
+                            <li class="nav-item" style="margin-bottom: 10px">
+                                <a  class="my-1" href="{% url 'warren_submit' %}"><i class="fas fa-plus-circle cyan-text"></i>
+                                    Create Warren
+                                </a>
+                            </li>
+                            {% endif %}
                      </div>
-                </a>
-         </div>
-    </div>
-    <div class="justify-content-center">
-          <form id="searchbar" action="{% url 'search' %}" method="get" class="form-inline my-2 my-lg-0">
+                </div>
+
+          </div>
+          <div class ="d-flex  justify-content-center ">
+              <form id="searchbar" action="{% url 'search' %}" method="get" class="form-inline my-2 my-lg-0">
               <div class="input-group">
                   <div class="input-group-prepend">
                         <span class="input-group-text"><i class="fas fa-search" aria-hidden="true"></i></span>
                   </div>
                   <input class="form-control form-control-sm" placeholder="Search"
-                    aria-label="Search" style="width: 300px;"
+                    aria-label="Search" style="width: 400px;"
                     name="q" type="text" value="{{request.GET.q}}">
               </div>
           </form>
-    </div>
-    <div class="row justify-content-end">
 
-      <div class="col">
-           {% if not request.user.is_authenticated %}
+          </div>
+          <div class="d-flex ml-auto my-1 justify-content-end">
+              {% if not request.user.is_authenticated %}
             <ul class="navbar-nav ml-auto nav-flex-icons" >
+
                 <li class="nav-item">
                     <button class="btn btn-sm my-0 btn-outline-primary" type="button" onclick="modal_login()">
                         Login
@@ -121,7 +119,7 @@
             </ul>
 
         {% endif %}
-      </div>
+          </div>
     </div>
 
 </nav>
