// Mejora de scripts

--- a/rabbitApp/templates/base.html
+++ b/rabbitApp/templates/base.html
@@ -27,7 +27,7 @@
              <h2 class="black-text">rabbit</h2>
              <div class="nav-item dropdown btn-group" style="margin-left: 50px">
                     <a class="dropdown-toggle my-2" id="dropdownMenu1" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false" style="width: 200px;">
+                        aria-haspopup="true" aria-expanded="false" style="width: 200px;">
                         Popular
                     </a>
                     <div class="dropdown-menu dropdown-primary " style="width: 200px">
@@ -203,6 +203,9 @@
 
 {% block more-scripts %}
 
+{% endblock %}
+
+{% block subs-follow-script %}
 {% endblock %}
 
 
