--- a/rabbitApp/templates/post.html
+++ b/rabbitApp/templates/post.html
@@ -126,17 +126,17 @@
         {% if request.user.is_authenticated %}
             <div class="card-body">
             <form id="{{ post.user.username }}form">
-            {% csrf_token %}
-            {% if post.user in following %}
-                <a  class="my-1"  onclick="follow('{{ post.user.username }}');"><i class="fas fa-user-friends small cyan-text"></i>
-                    <button class= "btn btn-sm btn-outline-primary my-0 ml-3" type="button">UNFOLLOW USER</button>
-                </a>
-            {% else %}
-                <a  class="my-1"  onclick="follow('{{ post.user.username }}');"><i class="fas fa-user-friends small cyan-text"></i>
-                    <button class= "btn btn-sm btn-outline-primary my-0 ml-3" type="button">FOLLOW USER</button>
-                </a>
-            {% endif %}
-        </form>
+                {% csrf_token %}
+                {% if post.user in following %}
+                    <a  class="my-1"  onclick="follow('{{ post.user.username }}');"><i class="fas fa-user-friends small cyan-text"></i>
+                        <button class= "btn btn-sm btn-outline-primary my-0 ml-3" type="button">UNFOLLOW USER</button>
+                    </a>
+                {% else %}
+                    <a  class="my-1"  onclick="follow('{{ post.user.username }}');"><i class="fas fa-user-friends small cyan-text"></i>
+                        <button class= "btn btn-sm btn-primary my-0 ml-3" type="button">FOLLOW USER</button>
+                    </a>
+                {% endif %}
+            </form>
 
          </div>
 
