--- a/rabbitApp/templates/comments.html
+++ b/rabbitApp/templates/comments.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class = "card mb-3 float-right">
                     <div class = " mb-3 float-right">
-                <button class="btn btn-sm my-0 btn-outline-primary waves-effect waves-light"  type="cancel" onclick="showReply({{ node.value.id }})" >CANCEL</button>
+                <button class="btn btn-sm my-0 btn-outline-primary waves-effect waves-light"  type="button" onclick="showReply({{ node.value.id }})" >CANCEL</button>
                 <button class="btn btn-primary btn-sm my-0 ml-3" type="submit">COMMENT</button>
                     </div>
                 </div>
