--- a/rabbitApp/templates/user_profile.html
+++ b/rabbitApp/templates/user_profile.html
@@ -1,4 +1,4 @@
-{% extends 'subsfollow.html' %}
+{% extends 'deleteModal.html' %}
 {% block content-body %}
     {% for post in posts %}
        <div class="card mb-4">
