--- a/rabbitApp/templates/home.html
+++ b/rabbitApp/templates/home.html
@@ -33,7 +33,7 @@
                         <a href="#" class="my-1" ><i class="fas fa-share small grey-text"> Share </i></a>
                     </div>
                     <div class="button" style="margin-left: 10px" >
-                        <a href="#" class="my-1" ><i class="fas fa-flag small grey-text"> Report </i></a>
+                        <a href="#" data-toggle="modal" data-target="#modalselectreport" class="my-1" ><i class="fas fa-flag small grey-text"> Report </i></a>
                     </div>
                     {% if post.user == request.user %}
                         <div class="button" style="margin-left: 10px">
@@ -47,4 +47,5 @@
         </div>
     {% endfor %}
     {% include 'confirm_delete.html' %}
+    {% include 'select_report.html' %}
 {% endblock %}
