--- a/rabbitApp/templates/deleteModal.html
+++ b/rabbitApp/templates/deleteModal.html
@@ -24,4 +24,28 @@
         $('#modalConfirmDelete').modal('show');
     }
     </script>
+    <script type="text/javascript">
+        function copyP(link) {
+
+              // Crea un campo de texto "oculto"
+              var aux = document.createElement("input");
+
+              // Asigna el contenido del elemento especificado al valor del campo
+              aux.setAttribute("value", link);
+
+              // Añade el campo a la página
+              document.body.appendChild(aux);
+
+              // Selecciona el contenido del campo
+              aux.select();
+
+              // Copia el texto seleccionado
+              document.execCommand("copy");
+
+              // Elimina el campo de la página
+              document.body.removeChild(aux);
+
+        }
+    </script>
+
 {% endblock %}
