--- a/rabbitApp/templates/home.html
+++ b/rabbitApp/templates/home.html
@@ -1,6 +1,7 @@
 {% extends 'deleteModal.html' %}
 
 {% block content-body %}
+
     {% for post in lastPost %}
         <div class="card mb-4">
             <div class="card-body">
@@ -29,8 +30,16 @@
             <div class="card-body" style="padding-top: 0">
 
                 <div class="d-flex" >
-                    <div class="button" >
-                        <a href="#" class="my-1" ><i class="fas fa-share small grey-text"> Share </i></a>
+                    <div class="dropdown">
+                         <a class="my-1 dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown"
+                            aria-haspopup="false" aria-expanded="false">
+                            <i class="fas fa-share small grey-text"> Share </i>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-center" style="margin-left: -5%;min-width: 30%">
+                            <a class="dropdown-item text-left"  onclick="copyP('http://127.0.0.1:8000{% url 'post' post.id %}')"><i class="fas fa-link small grey-text"> Copy link</i> </a>
+                            <a class="dropdown-item text-left" ><i class="fas fa-code small grey-text"> Embed</i> </a>
+
+                        </div>
                     </div>
                     <div class="button" style="margin-left: 10px" >
                         <a href="#" data-toggle="modal" data-target="#modalselectreport" class="my-1" ><i class="fas fa-flag small grey-text"> Report </i></a>
