--- a/rabbitApp/templates/home.html
+++ b/rabbitApp/templates/home.html
@@ -7,9 +7,12 @@
             <div class="row">
                 <div class="col-1" style="margin-left: 0">
                     <div class="card-body">
-                        <a class="card-text" style="margin-left: -2px"><i class="fas fa-arrow-up fa-1x grey-text"></i></a>
-                        <p class="card-text" style="margin-bottom: 0"><b>5</b></p>
-                        <a class="card-text" style="margin-left: -2px"><i class="fas fa-arrow-down fa-1x grey-text"></i></a>
+                        <form id="{{ post.id }}form">
+                            {% csrf_token %}
+                             <a class="card-text" id = "buttonup" onclick="enviarVotacio('{{ post.id }}','True')" style="margin-left: -2px"><i class="fas fa-arrow-up fa-1x grey-text"></i></a>
+                             <p class="card-text" id="p1" style="margin-bottom: 0"><b>5</b></p>
+                             <a class="card-text" onclick="enviarVotacio('{{ post.id }}','False')" style="margin-left: -2px"><i class="fas fa-arrow-down fa-1x grey-text"></i></a>
+                        </form>
                     </div>
 
                 </div>
@@ -70,4 +73,26 @@
     {% endfor %}
     {% include 'confirm_delete.html' %}
     {% include 'select_report.html' %}
+    <script>
+        var  enviarVotacio = (id,votacio) =>{
+            let data = $('#' + id + 'form').serialize() +  "&votacio=" + votacio;
+            var uri = location.protocol + '//' + location.host + "/vote/" + id;
+
+            $.ajax({
+                method: 'POST',
+                url: uri,
+                data: data,
+                success: (data) => {
+                    if (data.status == 'ok'){
+                        document.getElementById("p1").innerHTML = "New text!";
+                        location.reload()
+                    } else{
+                        alert(data.message)
+                    }
+                }
+            })
+        }
+
+    </script>
+
 {% endblock %}
