--- a/rabbitApp/templates/loginForm.html
+++ b/rabbitApp/templates/loginForm.html
@@ -36,6 +36,7 @@
                     {% endif %}
                 </div>
 
+                <a class="float-right" onclick="modal_register()"> Encara no estas registrat? Registrat !</a>
 
           </div>
           <div class="modal-footer d-flex justify-content-center pt-10">
