--- a/rabbitApp/templates/base.html
+++ b/rabbitApp/templates/base.html
@@ -216,6 +216,10 @@
     let modalRegister = $('#modalRegisterForm');
     let modalLogin = $('#modalLoginForm');
     function modal_register(){
+        if (modalLoginLoaded){
+            modalLogin.modal('hide');
+
+        }
         if(modalRegisterLoaded){
             modalRegister.modal('show');
         }
@@ -236,6 +240,7 @@
         if(modalLoginLoaded){
             modalLogin.modal('show');
         }
+
         else{
             $.ajax({
                 method: 'GET',
