--- a/rabbitApp/templates/search.html
+++ b/rabbitApp/templates/search.html
@@ -24,7 +24,12 @@
                             {% if post in suscribing %}
                                 <a class="btn btn-outline-primary btn-sm " onclick="suscribe('{{ post.name }}');">UnSuscribe</a>
                             {% else %}
-                                <a class="btn btn-primary btn-sm" onclick="suscribe('{{ post.name }}');">Suscribe</a>
+                                {% if request.user.is_authenticated %}
+                                    <a class="btn btn-primary btn-sm" onclick="suscribe('{{ post.name }}');">Suscribe</a>
+                                {% else %}
+                                    <a class="btn btn-primary btn-sm" onclick="modal_register();">Suscribe</a>
+                                {% endif %}
+
                             {% endif %}
                         </form>
 
